--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main class="container">
-    <h1>Curso de Angular</h1>
+    <h1 class="text-center">Curso de Angular</h1>
 
     <hr>
 
-    <app-form-template></app-form-template>
+    <app-form-reactive></app-form-reactive>
 </main>
