--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+h1 {
+    padding: 20px;
+    background-color: #27f;
+    border-radius: 10px;
+    margin-top: 20px;
+    color: #eee;
+}
+
+::selection {
+    background-color: #888;
+}
