--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,25 @@
 
     <hr>
 
-    <app-form-reactive></app-form-reactive>
+    <app-add-messages></app-add-messages>
+    <app-list-messages></app-list-messages>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ <!--    <input type="text" [(ngModel)]="title" class="form-control my-2">
+    <app-children [title]="title" 
+                  (titleChanged)="handleEvent( $event )">
+    </app-children> -->
 </main>
